about page update test

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to Yelpdemo</h1>
-<p>This is gonna be a sick <a href="http://baserails.com">BASERAILS!</a> of yelpy</p>
+<h3>heyyyyy</h3>
+<p>This is gonna be a sick little test website like <a href="http://yelp.com">Yelp</a></p>
 
