add sign-in links

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,6 +17,12 @@
 	font-size: 30px;
 	font-weight: bold;
 	}
+	.signup {
+	font-size: 20px !important;
+	}
+	.spaceleft {
+	padding-left: 50px;
+	}
 }
 
 .container-fluid {
