--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <div id="star-rating"></div>
+
   <div class="form-group">
     <%= form.label :rating %>
     <%= form.number_field :rating, class: "form-control" %>
@@ -25,3 +27,10 @@
     <%= form.submit class: "btn btn-primary"%>
   </div>
 <% end %>
+
+<script>
+  $('#star-rating').raty({
+    path: 'https://yelpdemobucket.s3.eu-west-2.amazonaws.com/stars', 
+    scoreName: 'review[rating]'
+  });
+</script>
